updated java-notes.md